--- a/composer.json
+++ b/composer.json
@@ -41,14 +41,16 @@
     "roots/wp-password-bcrypt": "1.0.0",
     "timber/timber": "^1.3",
     "webdevstudios/cpt-core": "^1.0",
-    "webdevstudios/taxonomy_core": "^0.2.4"
+    "webdevstudios/taxonomy_core": "^0.2.4",
+    "webdevstudios/cmb2": "^2.2",
+    "rogerlos/cmb2-metatabs-options": "^1.3"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^2.5.1"
   },
   "extra": {
     "installer-paths": {
-      "web/app/mu-plugins/{$name}/": ["type:wordpress-muplugin", "webdevstudios/cpt-core"],
+      "web/app/mu-plugins/{$name}/": ["type:wordpress-muplugin", "webdevstudios/cpt-core", "webdevstudios/cmb2", "rogerlos/cmb2-metatabs-options"],
       "web/app/plugins/{$name}/": ["type:wordpress-plugin"],
       "web/app/themes/{$name}/": ["type:wordpress-theme"]
     },
