--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,9 @@
     "webdevstudios/cpt-core": "^1.0",
     "webdevstudios/taxonomy_core": "^0.2.4",
     "webdevstudios/cmb2": "^2.2",
-    "rogerlos/cmb2-metatabs-options": "^1.3"
+    "rogerlos/cmb2-metatabs-options": "^1.3",
+    "curl/curl": "^1.7",
+    "paquettg/php-html-parser": "^1.7"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^2.5.1"
